<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="meta">Meta</string>
    <string name="from">from</string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="Name">Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_in">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">bio</string>
    <string name="add_post">Add Post</string>
    <string name="upload_reel">Upload Reel</string>
    <string name="share_to_post">Share to Post</string>
    <string name="your_post_may_be_appear_in_posts_and_can_be_seen_on_the_posts_tab_under_your_profile">Your post may be appear in posts and can be seen on the posts tab under your profile</string>
    <string name="cancle">Cancle</string>
    <string name="post">Post</string>
    <string name="write_a_caption">Write a caption</string>
    <string name="cancel">cancel</string>
    <string name="follow">follow</string>
</resources>