<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/profileimage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="136dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/black"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/black"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileimage">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/black"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/black"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@+id/Email"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/Email">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/rounded_corner"
        android:text="Log in"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/Pass"
        app:layout_constraintStart_toStartOf="@+id/Pass"
        app:layout_constraintTop_toBottomOf="@+id/Pass" />

    <Button
        android:id="@+id/btnnew"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="32dp"
        android:text="Create new account"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintCircleRadius="50dp"
        android:theme="@style/Widget.Material3.Button.OutlinedButton"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnlogin"
        app:layout_constraintStart_toStartOf="@+id/btnlogin" />

    <TextView
        android:id="@+id/metatext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meta"
        app:layout_constraintEnd_toEndOf="@+id/btnnew"
        app:layout_constraintStart_toStartOf="@+id/btnnew"
        app:layout_constraintTop_toBottomOf="@+id/btnnew"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:drawableStart="@drawable/logometa"
        android:drawablePadding="2dp"
        android:textColor="@color/black"
        android:drawableTint="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>